fix: resolve my account dropdown menu being half hidden on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,6 +68,11 @@ a {
     padding: 1%;
 }
 
+#my-account-dropdown {
+    top: 11px;
+    left: -88px;
+}
+
 .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: static;
 }
